[package]
name          = "tesseract"
version       = "0.11.0"
authors       = ["Kevin Kwok <antimatter15@gmail.com>", "Chris Couzens <ccouzens@gmail.com>"]
documentation = "https://docs.rs/tesseract"
repository    = "https://github.com/antimatter15/tesseract-rs"
description   = "Higher-level bindings for Tesseract OCR"
license       = "MIT"
keywords      = ["tesseract", "OCR", "bindings"]
categories    = ["api-bindings", "multimedia::images"]

[features]
api_41 = ["tesseract-plumbing/api_41"]
default = ["api_41"]

[dependencies]
tesseract-sys = "~0.5"
tesseract-plumbing = { git = "https://github.com/s3bk/tesseract-plumbing", default-features = false }
thiserror = "1.0"
